classDiagram
    class Task {
        +str title
        +int duration_minutes
        +str priority
        +bool completed
        +str notes
        +str frequency
        +date due_date
        +mark_complete()
        +mark_incomplete()
        +is_due_today() bool
    }

    class Pet {
        +str name
        +str species
        +int age
        +List~Task~ tasks
        +add_task(task)
        +remove_task(title) bool
        +get_tasks() List~Task~
        +get_pending_tasks() List~Task~
        +get_completed_tasks() List~Task~
        +total_task_minutes() int
    }

    class Owner {
        +str name
        +int available_minutes
        +List~Pet~ pets
        +add_pet(pet)
        +remove_pet(name) bool
        +get_pets() List~Pet~
        +get_all_tasks() List~tuple~
        +get_all_pending_tasks() List~tuple~
        +filter_tasks(pet_name, completed, priority, frequency) List~tuple~
        +total_task_minutes() int
    }

    class ScheduledItem {
        +Pet pet
        +Task task
        +int start_time
        +end_time int
        +start_time_str() str
        +end_time_str() str
    }

    class Scheduler {
        +Owner owner
        +List~ScheduledItem~ schedule
        +List~tuple~ skipped
        +build_schedule() List~ScheduledItem~
        +sort_by_time() List~ScheduledItem~
        +detect_conflicts() List~str~
        +explain_plan() List~str~
        +mark_all_complete()
        +get_summary() dict
    }

    Owner "1" --> "many" Pet : owns
    Pet "1" --> "many" Task : has
    Scheduler --> Owner : reads from
    Scheduler --> ScheduledItem : produces
    ScheduledItem --> Pet : references
    ScheduledItem --> Task : wraps
